...
          ),
        }}
      />
      <Tabs.Screen
        name="bookings"
        options={{
          title: 'Bookings',
          tabBarIcon: ({ color }) => (
            <CalendarCheck size={TAB_ICON_SIZE} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
